add bootstrap css

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="http://yandex.st/bootstrap/3.1.1/css/bootstrap.min.css"/>
+	</head>
 	<title>Hello</title>
-	<body>Hello World</body>
+	<body>
+		<h1>Hello World</h1>
+	</body>
 </html>
