--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<title>Hello</title>
 	<body>
 		<h1>Hello World</h1>
-		<p>Hello iiiiis</p>
+		<p class="lead">Hello iiiiis</p>
 	</body>
 </html>
